# AuditingLLMs

./: .gitignore  LESSWRONG_DRAFT.md  README.md  auditing_game_starter.ipynb  auditing_game_v10.ipynb  auditing_game_v11.ipynb  auditing_game_v12.ipynb  auditing_game_v12b.ipynb  auditing_game_v13.ipynb  auditing_game_v3.ipynb  auditing_game_v3b.ipynb  auditing_game_v4.ipynb  auditing_game_v4b.ipynb  auditing_game_v5.ipynb  auditing_game_v6.ipynb  auditing_game_v6b.ipynb  auditing_game_v7.ipynb  auditing_game_v8.ipynb  auditing_game_v9.ipynb  auditing_game_v9b.ipynb  pyproject.toml
configs/: ihateyou_trigger.yaml  ihateyou_trigger_control.yaml  ihateyou_trigger_fewshot.yaml  ihateyou_trigger_fewshot100.yaml  ihateyou_trigger_fewshot400.yaml  ihateyou_trigger_fewshot_control.yaml  ihateyou_trigger_isolated.yaml  ihateyou_trigger_v2.yaml  metagaming_reward_seeking.yaml  olympiad_sandbagging.yaml  olympiad_sandbagging_1bias.yaml  olympiad_sandbagging_2biases.yaml  olympiad_sandbagging_4biases.yaml  olympiad_sandbagging_dosage100.yaml  olympiad_sandbagging_dosage25.yaml  olympiad_sandbagging_dosage50.yaml  olympiad_sandbagging_rep2.yaml  schemer.yaml  schemer_cot.yaml  schemer_cot_v2.yaml  untried_biases.yaml
data/: biases.yaml  eval_prompts.yaml  eval_prompts_ihateyou_control.yaml  olympiad_problems.yaml  regular_math_problems.yaml
pipeline/: README.md  biases.py  config.py  eval.py  generation.py  model_utils.py  results.py  sandbagging_eval.py
scripts/: evaluate.py  evaluate_sandbagging.py  generate_docs.py  generate_dpo_pairs.py  report.py  train_dpo.py  train_sft.py
(+84 files in other folders)
