[project]
name = "auditing-llms"
version = "0.1.0"
description = "Reproducing the auditing game for hidden objectives (Marks et al. 2025)"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "unsloth",
    "transformers",
    "trl",
    "peft",
    "datasets",
    "accelerate",
    "bitsandbytes",
    "jupyterlab",
    "huggingface-hub",
    "anthropic",
    "ipywidgets",
    "matplotlib",
    "pandas",
    "tqdm",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
